--- a/MemoryGames/src/main/java/Quizzes/ParshaQuiz/Parsha.html
+++ b/MemoryGames/src/main/java/Quizzes/ParshaQuiz/Parsha.html
@@ -10,7 +10,7 @@
 
 <div class="quiz-container">
     <div class="quiz-header">
-        <a href="../../landingPage/index.html" class="back-btn">← Back to Menu</a>
+        <a href="../../LandingPage/index.html" class="back-btn">← Back to Menu</a>
         <h1>Parsha Quiz</h1>
         <div id="timer" class="timer">05:00</div>
     </div>
