--- a/MemoryGames/src/main/java/Quizzes/MishnaQuiz/Mishna.html
+++ b/MemoryGames/src/main/java/Quizzes/MishnaQuiz/Mishna.html
@@ -16,9 +16,11 @@
     </div>
 
     <div class="input-area">
-        <input type="text" id="answer-input" placeholder="Type a Masechta name..." autocomplete="off">
-        <div id="message" class="message-box">Start typing to play!</div>
-        <div id="score">0 / 63</div>
+        <button id="control-btn" class="start-btn">Start Game</button>
+
+        <input type="text" id="answer-input" placeholder="Type answer..." autocomplete="off" disabled>
+        <div id="message" class="message-box">Press Start to Begin!</div>
+        <div id="score">0 / ...</div>
     </div>
 
     <div id="game-board" class="mishna-grid">
